@@ -1329,6 +1329,100 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+annotation|@
+name|Test
+DECL|method|testEmptyArgForCommands ()
+specifier|public
+name|void
+name|testEmptyArgForCommands
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|CredentialShell
+name|shell
+init|=
+operator|new
+name|CredentialShell
+argument_list|()
+decl_stmt|;
+name|String
+index|[]
+name|command
+init|=
+block|{
+literal|"list"
+block|,
+literal|"-provider"
+block|}
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Expected empty argument on "
+operator|+
+name|command
+operator|+
+literal|" to return 1"
+argument_list|,
+literal|1
+argument_list|,
+name|shell
+operator|.
+name|init
+argument_list|(
+name|command
+argument_list|)
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|String
+name|cmd
+range|:
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|"create"
+argument_list|,
+literal|"delete"
+argument_list|)
+control|)
+block|{
+name|shell
+operator|.
+name|setConf
+argument_list|(
+operator|new
+name|Configuration
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Expected empty argument on "
+operator|+
+name|cmd
+operator|+
+literal|" to return 1"
+argument_list|,
+literal|1
+argument_list|,
+name|shell
+operator|.
+name|init
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+name|cmd
+block|}
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 end_class
 
